# construction_ecosystem

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: base.py  env.py
migrations/versions/: ab2d3d2f16e9_create_tables.py
sql/: init.sql
src/api/: routers.py
src/api/v1/: user.py
src/common/: enums.py  jwt.py
src/common/constants/: user.py
src/common/exception/: errors.py
src/common/response/: response_code.py  response_schema.py
src/config/: db_config.py  project_config.py
src/core/: registrar.py
src/database/: database.py
src/dependencies/: user_dependency.py
src/models/: base_model.py  category_model.py  constructionsite_model.py  lot_model.py  product_model.py  project_model.py  response_model.py  review_model.py  user_model.py
src/repositories/: base_repository.py  category_repository.py  constructionsite_repository.py  lot_repository.py  product_repository.py  project_repository.py  reviews_repository.py  sqlalchemy_repository.py  user_repository.py
src/schemas/: base_schema.py  token.py  user_schema.py
src/services/: base_service.py  category_service.py  lot_service.py  product_service.py  project_service.py  user_service.py
